--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -5678,15 +5678,15 @@ zoom_step_count=1
 		
 [wpn_akm_alfa_gee36_hud]:wpn_akm_alfa_hud
 item_visual                              = dynamics\weapons\wpn_akm_alfa\wpn_akm_alfa_gee36_hud.ogf
-        aim_hud_offset_alt_pos           = -0.074968, -0.000439, -0.140646
-        aim_hud_offset_alt_pos_16x9      = -0.074968, -0.000439, -0.140646
-        aim_hud_offset_alt_rot           = -0.005957, -0.007322, 0
-        aim_hud_offset_alt_rot_16x9      = -0.005957, -0.007322, 0
+        aim_hud_offset_alt_pos           = -0.003467, -0.012036, -0.011719
+        aim_hud_offset_alt_pos_16x9      = -0.003467, -0.012036, -0.011719
+        aim_hud_offset_alt_rot           = 0.025246, 0.019592, 0
+        aim_hud_offset_alt_rot_16x9      = 0.025246, 0.019592, 0
 		
-        aim_hud_offset_pos               = -0.073821, 0.016729, -0.152949
-        aim_hud_offset_pos_16x9          = -0.073821, 0.016729, -0.152949
-        aim_hud_offset_rot               = -0.004548, -0.012212, 0
-        aim_hud_offset_rot_16x9          = -0.004548, -0.012212, 0
+        aim_hud_offset_pos               = -0.002706, 0.00525, -0.043855
+        aim_hud_offset_pos_16x9          = -0.002706, 0.00525, -0.043855
+        aim_hud_offset_rot               = 0.02704, 0.014051, -0.025
+        aim_hud_offset_rot_16x9          = 0.02704, 0.014051, -0.025
 		
 ;==============================================================================
 ![wpn_akm_isg]
@@ -6036,6 +6036,7 @@ item_visual                	= anomaly_weapons\wpn_val\wpn_val_pso2_hud.ogf
 ![wpn_val_1pn93n2_1gs]
         scope_zoom_factor                = 30
         scope_texture                    =
+		scope_nightvision                =
 		nv_scope_status 				 = 0
 ![wpn_val_1pn93n2_1gs_hud]
         aim_hud_offset_pos               = -0.056757, 0.027685, 0.01208
@@ -6047,6 +6048,7 @@ item_visual                	= anomaly_weapons\wpn_val\wpn_val_pso2_hud.ogf
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
+		scope_nightvision                =
 		scope_dynamic_zoom				 = on
 ![wpn_val_1pn93_hud]
         aim_hud_offset_pos               = -0.060748, 0.019809, -0.023171
@@ -8213,7 +8215,7 @@ item_visual                		= anomaly_weapons\wpn_ak74m\wpn_ak74m_ps02_hud.ogf
 		
 ;==============================================================================		
 ![wpn_akms_alt]
->scopes                                   = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs
+>scopes                      = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
