--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs.ltx
@@ -1229,3 +1229,104 @@ item_visual                              = dynamics\weapons\wpn_kriss_vector\wpn
         aim_hud_offset_pos_16x9          = -0.076783, 0.024459, -0.101068
         aim_hud_offset_rot               = 0.030878, -0.024734, -0.01
         aim_hud_offset_rot_16x9          = 0.030878, -0.024734, -0.01			
+		
+;==============================================================================	
+![wpn_udp9]
+>scopes		= vulcan, monstrum, tac30, trihawk
+<scopes		= march_f_shorty, uh1_magd, e0t2_magd, pn23
+		
+![wpn_udp9_acog_hud]		
+        aim_hud_offset_pos               = -0.058, 0.007199, -0.093387
+        aim_hud_offset_pos_16x9          = -0.058, 0.007199, -0.093387
+        aim_hud_offset_rot               = 0.012238, -0.003768, 0
+        aim_hud_offset_rot_16x9          = 0.012238, -0.003768, 0
+		
+![wpn_udp9_specter]
+zoom_step_count				= 1
+![wpn_udp9_specter_hud]
+        aim_hud_offset_pos               = -0.057474, 0.002474, -0.08707
+        aim_hud_offset_pos_16x9          = -0.057474, 0.002474, -0.08707
+        aim_hud_offset_rot               = 0.005746, -0.003815, 0
+        aim_hud_offset_rot_16x9          = 0.005746, -0.003815, 0
+		
+;--------------------------------------------------------------------------------------------		
+[wpn_udp9_monstrum]:wpn_udp9
+hud                     = wpn_udp9_monstrum_hud
+
+1icon_layer				= monstrum
+1icon_layer_x			= 95
+1icon_layer_y			= -18
+
+zoom_rotate_time        = 0.25
+
+scope_status            = 1
+scope_zoom_factor       = 60
+scope_dynamic_zoom      = off
+
+[wpn_udp9_monstrum_hud]:wpn_udp9_hud
+item_visual                              = dynamics\weapons\wpn_udp9\wpn_udp9_monstrum_hud.ogf	
+        aim_hud_offset_pos               = -0.057474, 0.002474, -0.08707
+        aim_hud_offset_pos_16x9          = -0.057474, 0.002474, -0.08707
+        aim_hud_offset_rot               = 0.005746, -0.003815, 0
+        aim_hud_offset_rot_16x9          = 0.005746, -0.003815, 0
+		
+;--------------------------------------------------------------------------------------------		
+[wpn_udp9_trihawk]:wpn_udp9
+hud                     = wpn_udp9_trihawk_hud
+
+1icon_layer				= trihawk
+1icon_layer_x			= 95
+1icon_layer_y			= -15
+
+zoom_rotate_time        = 0.25
+
+scope_status            = 1
+scope_zoom_factor       = 30
+scope_dynamic_zoom      = off
+
+[wpn_udp9_trihawk_hud]:wpn_udp9_hud
+item_visual                              = dynamics\weapons\wpn_udp9\wpn_udp9_trihawk_hud.ogf	
+        aim_hud_offset_pos               = -0.057732, -0.000153, -0.030219
+        aim_hud_offset_pos_16x9          = -0.057732, -0.000153, -0.030219
+        aim_hud_offset_rot               = 0.005931, -0.003736, 0
+        aim_hud_offset_rot_16x9          = 0.005931, -0.003736, 0
+		
+;--------------------------------------------------------------------------------------------		
+[wpn_udp9_vulcan]:wpn_udp9
+hud                     = wpn_udp9_vulcan_hud
+
+1icon_layer				= vulcan
+1icon_layer_x			= 75
+1icon_layer_y			= -16
+
+        scope_status				= 1
+        scope_zoom_factor			= 35
+        zoom_rotate_time			= 0.25
+        scope_dynamic_zoom			= off
+
+[wpn_udp9_vulcan_hud]:wpn_udp9_hud
+item_visual                              = dynamics\weapons\wpn_udp9\wpn_udp9_vulcan_hud.ogf	
+        aim_hud_offset_pos               = -0.05813, 0.006093, -0.05412
+        aim_hud_offset_pos_16x9          = -0.05813, 0.006093, -0.05412
+        aim_hud_offset_rot               = 0.005784, -0.003627, 0
+        aim_hud_offset_rot_16x9          = 0.005784, -0.003627, 0
+		
+;--------------------------------------------------------------------------------
+[wpn_udp9_tac30]:wpn_udp9
+hud                         = wpn_udp9_tac30_hud
+
+        1icon_layer					= tac30
+        1icon_layer_x				= 73
+        1icon_layer_y				= -14
+                
+        scope_status				= 1
+        scope_zoom_factor			= 30
+        zoom_rotate_time			= 0.25
+        scope_dynamic_zoom			= on	
+
+[wpn_udp9_tac30_hud]:wpn_udp9_hud
+item_visual                              = dynamics\weapons\wpn_udp9\wpn_udp9_tac30_hud.ogf
+        aim_hud_offset_pos               = -0.05772, 0.000406, -0.019271
+        aim_hud_offset_pos_16x9          = -0.05772, 0.000406, -0.019271
+        aim_hud_offset_rot               = 0.005869, -0.003857, 0
+        aim_hud_offset_rot_16x9          = 0.005869, -0.003857, 0
