--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_shotgun.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_shotgun.ltx
@@ -288,8 +288,13 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_dynamic_zoom			= off
 ![wpn_saiga12s_m2_acog_hud]
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_acog_hud.ogf	
+        hands_position                   = 0.045997, -0.042624, 0.263856
+        hands_position_16x9              = 0.045997, -0.042624, 0.263856
 
-
+        aim_hud_offset_pos               = -0.0567, -0.005236, -0.030976
+        aim_hud_offset_pos_16x9          = -0.0567, -0.005236, -0.030976
+        aim_hud_offset_rot               = 0.063178, 0.038987, 0
+        aim_hud_offset_rot_16x9          = 0.063178, 0.038987, 0
 ![wpn_saiga12s_m2_specter]
 		scope_texture               =
 		zoom_step_count				= 1
@@ -299,15 +304,25 @@ item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_
         scope_dynamic_zoom			= on
 ![wpn_saiga12s_m2_specter_hud]
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_specter_hud.ogf
+        hands_position                   = 0.045997, -0.042624, 0.263856
+        hands_position_16x9              = 0.045997, -0.042624, 0.263856
 
-
+        aim_hud_offset_alt_pos           = -0.057227, -0.034334, -0.028338
+        aim_hud_offset_alt_pos_16x9      = -0.057227, -0.034334, -0.028338
+        aim_hud_offset_alt_rot           = 0.057029, 0.043632, 0
+        aim_hud_offset_alt_rot_16x9      = 0.057029, 0.043632, 0
+		
+        aim_hud_offset_pos               = -0.056598, -0.006949, -0.028338
+        aim_hud_offset_pos_16x9          = -0.056598, -0.006949, -0.028338
+        aim_hud_offset_rot               = 0.056857, 0.039057, 0
+        aim_hud_offset_rot_16x9          = 0.056857, 0.039057, 0
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_m2_tac30]:wpn_saiga12s_m2
 hud                     = wpn_saiga12s_m2_tac30_hud
 
 1icon_layer				= tac30
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 45
+1icon_layer_y			= -1
 
         scope_status				= 1
         scope_zoom_factor			= 30
@@ -316,13 +331,16 @@ hud                     = wpn_saiga12s_m2_tac30_hud
 
 [wpn_saiga12s_m2_tac30_hud]:wpn_saiga12s_m2_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_tac30_hud.ogf	
-
+        aim_hud_offset_pos               = -0.052131, -0.014786, 0.033438
+        aim_hud_offset_pos_16x9          = -0.052131, -0.014786, 0.033438
+        aim_hud_offset_rot               = 0.041143, 0.021115, 0
+        aim_hud_offset_rot_16x9          = 0.041143, 0.021115, 0
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_m2_vulcan]:wpn_saiga12s_m2
 hud                     = wpn_saiga12s_m2_vulcan_hud
 
 1icon_layer				= vulcan
-1icon_layer_x			= 90
+1icon_layer_x			= 43
 1icon_layer_y			= -3
 
         scope_status				= 1
@@ -332,14 +350,17 @@ hud                     = wpn_saiga12s_m2_vulcan_hud
 
 [wpn_saiga12s_m2_vulcan_hud]:wpn_saiga12s_m2_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_vulcan_hud.ogf	
-		
+        aim_hud_offset_pos               = -0.052343, -0.009962, -0.001553
+        aim_hud_offset_pos_16x9          = -0.052343, -0.009962, -0.001553
+        aim_hud_offset_rot               = 0.040846, 0.02109, 0
+        aim_hud_offset_rot_16x9          = 0.040846, 0.02109, 0		
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_m2_trihawk]:wpn_saiga12s_m2
 hud                     = wpn_saiga12s_m2_trihawk_hud
 
 1icon_layer				= trihawk
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 64
+1icon_layer_y			= -2
 
         scope_status				= 1
         scope_zoom_factor			= 40
@@ -348,8 +369,10 @@ hud                     = wpn_saiga12s_m2_trihawk_hud
 
 [wpn_saiga12s_m2_trihawk_hud]:wpn_saiga12s_m2_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_trihawk_hud.ogf	
-
-
+        aim_hud_offset_pos               = -0.052343, -0.009962, -0.001553
+        aim_hud_offset_pos_16x9          = -0.052343, -0.009962, -0.001553
+        aim_hud_offset_rot               = 0.040846, 0.02109, 0
+        aim_hud_offset_rot_16x9          = 0.040846, 0.02109, 0
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_m2_monstrum]:wpn_saiga12s_m2
 hud                     = wpn_saiga12s_m2_monstrum_hud
@@ -365,8 +388,11 @@ hud                     = wpn_saiga12s_m2_monstrum_hud
 
 [wpn_saiga12s_m2_monstrum_hud]:wpn_saiga12s_m2_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_m2\wpn_saiga12s_m2_monstrum_hud.ogf	
-
-
+        aim_hud_offset_pos               = -0.051999, -0.002266, -0.004115
+        aim_hud_offset_pos_16x9          = -0.051999, -0.002266, -0.004115
+        aim_hud_offset_rot               = 0.040984, 0.020245, 0
+        aim_hud_offset_rot_16x9          = 0.040984, 0.020245, 0
+		
 ;==============================================================================	
 ![wpn_saiga12s_isg]
 >scopes						 = acog, specter, tac30, vulcan, trihawk, monstrum
@@ -383,7 +409,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_dynamic_zoom			= off
 ![wpn_saiga12s_isg_acog_hud]
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_acog_hud.ogf	
-
+        aim_hud_offset_pos               = -0.058774, 0.003015, -0.058829
+        aim_hud_offset_pos_16x9          = -0.058774, 0.003015, -0.058829
+        aim_hud_offset_rot               = 0.021166, 0.003502, 0.002187
+        aim_hud_offset_rot_16x9          = 0.021166, 0.003502, 0.002187
 
 ![wpn_saiga12s_isg_specter]
 		scope_texture               =
@@ -394,14 +423,17 @@ item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn
         scope_dynamic_zoom			= on
 ![wpn_saiga12s_isg_specter_hud]
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_specter_hud.ogf
-
+        aim_hud_offset_pos               = -0.05876, 0.000728, -0.05393
+        aim_hud_offset_pos_16x9          = -0.05876, 0.000728, -0.05393
+        aim_hud_offset_rot               = 0.013365, 0.003754, 0.002187
+        aim_hud_offset_rot_16x9          = 0.013365, 0.003754, 0.002187
 
 [wpn_saiga12s_isg_tac30]:wpn_saiga12s_isg
 hud                     = wpn_saiga12s_isg_tac30_hud
 
 1icon_layer				= tac30
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 52
+1icon_layer_y			= -14
 
         scope_status				= 1
         scope_zoom_factor			= 30
@@ -410,14 +442,17 @@ hud                     = wpn_saiga12s_isg_tac30_hud
 
 [wpn_saiga12s_isg_tac30_hud]:wpn_saiga12s_isg_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_tac30_hud.ogf	
-
+        aim_hud_offset_pos               = -0.058988, -0.002823, 0.007977
+        aim_hud_offset_pos_16x9          = -0.058988, -0.002823, 0.007977
+        aim_hud_offset_rot               = 0.013801, 0.003777, 0.002187
+        aim_hud_offset_rot_16x9          = 0.013801, 0.003777, 0.002187
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_isg_vulcan]:wpn_saiga12s_isg
 hud                     = wpn_saiga12s_isg_vulcan_hud
 
 1icon_layer				= vulcan
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 52
+1icon_layer_y			= -15
 
         scope_status				= 1
         scope_zoom_factor			= 35
@@ -426,14 +461,17 @@ hud                     = wpn_saiga12s_isg_vulcan_hud
 
 [wpn_saiga12s_isg_vulcan_hud]:wpn_saiga12s_isg_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_vulcan_hud.ogf	
-		
+        aim_hud_offset_pos               = -0.059164, 0.001845, -0.026921
+        aim_hud_offset_pos_16x9          = -0.059164, 0.001845, -0.026921
+        aim_hud_offset_rot               = 0.013553, 0.003607, 0.002187
+        aim_hud_offset_rot_16x9          = 0.013553, 0.003607, 0.002187		
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_isg_trihawk]:wpn_saiga12s_isg
 hud                     = wpn_saiga12s_isg_trihawk_hud
 
 1icon_layer				= trihawk
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 72
+1icon_layer_y			= -17
 
         scope_status				= 1
         scope_zoom_factor			= 40
@@ -442,14 +480,17 @@ hud                     = wpn_saiga12s_isg_trihawk_hud
 
 [wpn_saiga12s_isg_trihawk_hud]:wpn_saiga12s_isg_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_trihawk_hud.ogf	
-
+        aim_hud_offset_pos               = -0.058856, -0.00336, -0.015495
+        aim_hud_offset_pos_16x9          = -0.058856, -0.00336, -0.015495
+        aim_hud_offset_rot               = 0.013929, 0.003955, 0.002187
+        aim_hud_offset_rot_16x9          = 0.013929, 0.003955, 0.002187
 ;--------------------------------------------------------------------------------------------
 [wpn_saiga12s_isg_monstrum]:wpn_saiga12s_isg
 hud                     = wpn_saiga12s_isg_monstrum_hud
 
 1icon_layer				= monstrum
-1icon_layer_x			= 90
-1icon_layer_y			= -3
+1icon_layer_x			= 70
+1icon_layer_y			= -16
 
         scope_status				= 1
         scope_zoom_factor			= 60
@@ -458,7 +499,11 @@ hud                     = wpn_saiga12s_isg_monstrum_hud
 
 [wpn_saiga12s_isg_monstrum_hud]:wpn_saiga12s_isg_hud
 item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn_saiga12s_isg_monstrum_hud.ogf
-	
+        aim_hud_offset_pos               = -0.059162, 0.009634, -0.027583
+        aim_hud_offset_pos_16x9          = -0.059162, 0.009634, -0.027583
+        aim_hud_offset_rot               = 0.013381, 0.003562, 0.002187
+        aim_hud_offset_rot_16x9          = 0.013381, 0.003562, 0.002187
+		
 ;==============================================================================
 ![wpn_mossberg590_rail]
 >scopes	=	tac30, monstrum, trihawk, hamr, vulcan
