--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -2389,6 +2389,7 @@ scope_status                 = 1
 scope_texture                = 
 scope_zoom_factor            = 30
 scope_dynamic_zoom		     = on
+zoom_step_count=1
 
 [wpn_m249_specter_hud]:wpn_m249_hud,hud_low_interia
 item_visual                              = anomaly_weapons\wpn_m249\wpn_m249_specter_hud.ogf
@@ -2564,8 +2565,8 @@ scope_texture                    =
 
 s3ds_exit_pupil		= 0.4
 ![wpn_pkm_zenit_siber_specter_hud]
-        aim_hud_offset_pos               = 0.007058, -0022065, -0.043522
-        aim_hud_offset_pos_16x9          = 0.007058, -0022065, -0.043522
+        aim_hud_offset_pos               = 0.007058, -0.022065, -0.043522
+        aim_hud_offset_pos_16x9          = 0.007058, -0.022065, -0.043522
         aim_hud_offset_rot               = 0.007856, 0.002285, 0.009321
         aim_hud_offset_rot_16x9          = 0.007856, 0.002285, 0.009321
 		
