--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/weapons/w_ak105_bas.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/weapons/w_ak105_bas.ltx
@@ -282,15 +282,15 @@ ph_mass                                  = 4
 inv_weight                               = 3.800
 
 hud                                      = wpn_ak105_swamp_hud
-visual                                   = dynamics\weapons\wpn_ak105\wpn_ak105_swamp_world.ogf
+visual                                   = dynamics\weapons\wpn_ak105\wpn_ak105_swamp_45_world.ogf
 
 silencer_name                            = wpn_sil_geks545
 silencer_x                               = 214
 silencer_y                               = 3
 
 scope_status                             = 1
-scope_dynamic_zoom                       = off
-scope_zoom_factor                        = 25
+scope_dynamic_zoom                       = on
+scope_zoom_factor                        = 30
 
 ammo_elapsed                             = 45
 ammo_mag_size                            = 45
@@ -312,6 +312,14 @@ laser_status = true
 
 use_alt_aim_hud                   = true
 
+	s3ds_reticle_size 	= 4.5
+	s3ds_eye_relief 	= 2
+	s3ds_chroma_power	= 0.04	
+	s3ds_reticle_type 	= 4
+	ms_count 			= 3
+	ms_colors			= scope_black, scope_red_dim, scope_red
+	magnification 		= 4	
+    min_magnification	= 1
 ;-----------------------------------------------------SWAMP_HUD-----------------------------------------------------------------------------
 [wpn_ak105_swamp_hud]:wpn_ak105_bas_hud
 
@@ -394,7 +402,36 @@ fire_point                               = 0, 0, 0
 fire_point2                              = 0, 0, 0
 
 freelook_z_offset_mul					 = 0.1
-;-----------------------------------------------------------------------------------------------------
+
+;----------------------------------------------------------------------------------------
+[wpn_ak105_swamp_gauss_sight]:wpn_ak105_swamp
+hud						= wpn_ak105_swamp_gauss_sight_hud
+
+1icon_layer			    = gauss_sight
+1icon_layer_x			= 60
+1icon_layer_y			= -9
+
+zoom_rotate_time		= 0.25
+
+scope_status                     = 1
+scope_dynamic_zoom               = on
+scope_zoom_factor                = 12
+
+	s3ds_reticle_size 	= 5
+	s3ds_image_type 	= 2
+	s3ds_reticle_type 	= 6
+	ms_count 			= 2
+	magnification 		= 10
+    min_magnification	= 
+	
+[wpn_ak105_swamp_gauss_sight_hud]:wpn_ak105_swamp_hud
+item_visual                              = dynamics\weapons\wpn_ak105\wpn_ak105_swamp_gauss_hud.ogf
+        aim_hud_offset_pos               = -0.069137, 0.010895, -0.071568
+        aim_hud_offset_pos_16x9          = -0.069137, 0.010895, -0.071568
+        aim_hud_offset_rot               = 0.005096, -0.000649, -0.006
+        aim_hud_offset_rot_16x9          = 0.005096, -0.000649, -0.006
+		
+;============================================================================================================
 [wpn_ak105_shakal]:wpn_ak105_bas
 
 inv_grid_width     = 5
@@ -403,6 +440,7 @@ inv_grid_x         = 3
 inv_grid_y         = 18
 
 parent_section                           = wpn_ak105_shakal
+scopes									 = gauss_sight
 
 inv_name                                 = st_wpn_ak105_shakal
 inv_name_short                           = st_wpn_ak105_shakal
@@ -421,7 +459,7 @@ ph_mass                                  = 4
 inv_weight                               = 3.480
 
 hud                                      = wpn_ak105_shakal_hud
-visual                                   = dynamics\weapons\wpn_ak105\wpn_ak105_swamp_world.ogf
+visual                                   = dynamics\weapons\wpn_ak105\wpn_ak105_shakal_45_world.ogf
 
 silencer_name                            = wpn_sil_geks545
 silencer_x                               = 214
@@ -531,4 +569,33 @@ fire_point                               = 0, 0, 0
 fire_point2                              = 0, 0, 0
 
 freelook_z_offset_mul					 = 0.1
+;----------------------------------------------------------------------------------------
+[wpn_ak105_shakal_gauss_sight]:wpn_ak105_shakal
+hud						= wpn_ak105_shakal_gauss_sight_hud
+
+1icon_layer			    = gauss_sight
+1icon_layer_x			= 60
+1icon_layer_y			= -9
+
+zoom_rotate_time		= 0.25
+
+scope_status                     = 1
+scope_dynamic_zoom               = on
+scope_zoom_factor                = 12
+
+	s3ds_reticle_size 	= 5
+	s3ds_image_type 	= 2
+	s3ds_reticle_type 	= 6
+	ms_count 			= 2
+	magnification 		= 10
+    min_magnification	= 
+	
+[wpn_ak105_shakal_gauss_sight_hud]:wpn_ak105_shakal_hud
+item_visual                              = dynamics\weapons\wpn_ak105\wpn_ak105_shakal_gauss_hud.ogf
+        aim_hud_offset_pos               = -0.069137, 0.010895, -0.071568
+        aim_hud_offset_pos_16x9          = -0.069137, 0.010895, -0.071568
+        aim_hud_offset_rot               = 0.005096, -0.000649, -0.006
+        aim_hud_offset_rot_16x9          = 0.005096, -0.000649, -0.006
+		
 ;-----------------------------------------------------------------------------------------------------
+
